--- a/report/mail_config.ini
+++ b/report/mail_config.ini
@@ -4,4 +4,4 @@ smtp_port = 587
 username = phd@phd-support.de
 sender = phd@phd-support.de
 password = 12345678
-recipient = hallo@phd-it-systeme.de
+recipient = hallo@phd-it-systeme.de; empfaenger2@domain.de; empfaenger3@domain.de
